- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P1: Critical
 - 
    6.6
 - 
    None
 
- 
        
 - 
        58dc732e6 (dev), 8d5a56e44 (6.7), d20406107 (6.6)
 
I'm following this documentation : https://doc.qt.io/qt-6/quick3d-lightmap.html#baking-lightmaps
*with MinGW kit, the baking was successful.
[How to reproduce]
- Download the attached project and configure it with Qt 6.6.0 MSVC 2019 Kit
 - Build it with Debug
 - Run it with --bake-lightmaps
 - --> Error dialog gets displayed
 
[Error dialog]

[Error message(last line) + output]
22:44:55: Starting C:\Users\81808\Downloads\build-LightMappingExample-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug\appLightMappingExample.exe --bake-lightmaps... QML debugging is enabled. Only use this in a safe environment. qrc:/LightMappingExample/Main.qml:41: TypeError: Property 'vector3' of object QtObject(0x225e4ed6720) is not a function QSSG.warning: Failed to load lightmap image: :/LightMappingExample/qlm_cube1.exr QSSG.warning: Failed to load lightmap image: :/LightMappingExample/qlm_cylinder1.exr "[lm] Progress: Bake starting..." "[lm] Progress: Total models registered: 2" "[lm] Progress: Geometry setup..." "[lm] Progress: Lightmap UV unwrap done for model QQuick3DModel in 12 ms" "[lm] Progress: Lightmap UV unwrap done for model QQuick3DModel in 26 ms" "[lm] Progress: Found 2 models for the lightmapped scene" "[lm] Progress: Found 1 lights enabled for baking" [lm] Bounds in world space for raytracing scene: QVector3D(-249.9, -209.996, -249.9) QVector3D(249.9, 50, 249.9) "[lm] Progress: Geometry setup done. Time taken: 46 ms" "[lm] Progress: Preparing lightmaps..." "[lm] Progress: Successfully rasterized 53016/56628 lightmap texels for model QQuick3DModel with lightmap size (286, 198) in 12 ms" "[lm] Progress: Successfully rasterized 53408/78300 lightmap texels for model QQuick3DModel with lightmap size (290, 270) in 14 ms" "[lm] Progress: Lightmap preparing done" "[lm] Progress: Computing direct lighting..." "[lm] Progress: Direct light computed for model QQuick3DModel in 55 ms" "[lm] Progress: Direct light computed for model QQuick3DModel in 151 ms" "[lm] Progress: Direct light computation completed in 157 ms" "[lm] Progress: Computing indirect lighting..." "[lm] Progress: Total texels to compute for model QQuick3DModel: 56628" "[lm] Progress: Computing indirect lighting for model QQuick3DModel with key cube1" "[lm] Progress: Sample count: 256, Workgroup size: 32, Max bounces: 3, Multiplier: 1" "[lm] Progress: 46628 texels left" "[lm] Progress: 36628 texels left" "[lm] Progress: 26628 texels left" "[lm] Progress: 16628 texels left" "[lm] Progress: 6628 texels left" "[lm] Progress: Indirect lighting computed for model QQuick3DModel with key cube1 in 21252 ms" "[lm] Progress: Total texels to compute for model QQuick3DModel: 78300" "[lm] Progress: Computing indirect lighting for model QQuick3DModel with key cylinder1" "[lm] Progress: Sample count: 256, Workgroup size: 32, Max bounces: 3, Multiplier: 1" "[lm] Progress: 68300 texels left" "[lm] Progress: 58300 texels left" "[lm] Progress: 48300 texels left" "[lm] Progress: 38300 texels left" "[lm] Progress: 28300 texels left" "[lm] Progress: Indirect lighting computed for model QQuick3DModel with key cylinder1 in 32707 ms" "[lm] Progress: Indirect light computation completed in 53960 ms" "[lm] Progress: Post-processing..." lm: 0 UV seams in 0x225f5c92420 "[lm] Progress: Post-processing for model QQuick3DModel with key cube1 done in 8" lm: 12 UV seams in 0x225f5cc18f0 ASSERT: "vector.v[1] > 0 || vector.v[1] < 0" in file C:\Users\qt\work\install\include\QtGui/qvectornd.h, line 598
| For Gerrit Dashboard: QTBUG-120629 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 531479,3 | Robustify lightmapper blendLine function | dev | qt/qtquick3d | Status: MERGED | +2 | 0 | 
| 532013,2 | Robustify lightmapper blendLine function | 6.7 | qt/qtquick3d | Status: MERGED | +2 | 0 | 
| 532126,2 | Robustify lightmapper blendLine function | 6.6 | qt/qtquick3d | Status: MERGED | +2 | 0 |